--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 
+    <link rel="stylesheet" href="style.css"
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +21,15 @@
 
 </head>
 <body>
-    
+    <img src="" alt="">
+    <div class = "nav-banner">
+        <div class = "logo-wrapper">
+            <a href = "index.html"> <img src ="logo/socialized-logo(160x40).svg"></a>
+            
+        </div>
+    <div class = "link-wrapper">
+        <a href = "sign-up.html">Sign up</a>
+    </div>
+    </div>
 </body>
 </html>
