--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,7 +24,7 @@
     <img src="" alt="">
     <div class = "nav-banner">
         <div class = "logo-wrapper">
-            <a href = "index.html"> <img src ="logo/socialized-logo(160x40).svg"></a>
+            <a href = "index.html"> <img src ="./logo/socialized-logo(160x40).svg"></a>
             
         </div>
     <div class = "link-wrapper">
@@ -32,4 +32,7 @@
     </div>
     </div>
 </body>
+<script>
+    require('./renderer.js');
+</script>
 </html>
