Moved css for sign-up page to its own file

--- a/sign-up.html
+++ b/sign-up.html
@@ -3,6 +3,7 @@
 <head>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="sign-up.css">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,37 +17,7 @@
     <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <style>
-        form {
-             width: 80%;
-             margin: 0 auto;
-        }
-
-        label,
-        input {
-            /* In order to define widths */
-            display: inline-block;
-        }
-
-        label {
-            width: 30%;
-            /* Positions the label text beside the input */
-            text-align: right;
-        }
-
-        label+input {
-            width: 30%;
-            /* Large margin-right to force the next element to the new-line
-                and margin-left to create a gutter between the label and input */
-            margin: 0 30% 10px 4%;
-        }
-
-        .buttonHolder{
-            text-align: center;
-        }
-    </style>
-
-
+    
 </head>
 <body>
     <img src="" alt="">
