--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </div>
     <div class = "link-wrapper">
         <a href = "sign-up.html">Sign up</a>
+        <a href = "about-us.html">About us</a>
     </div>
     </div>
 </body>
