fixed sign up page to match dark theme

--- a/sign-up.html
+++ b/sign-up.html
@@ -20,12 +20,16 @@
     
 </head>
 <body>
-    <img src="" alt="">
-    <div class = "nav-banner">
-        <div class = "logo-wrapper">
-            <a href = "index.html"> <img src ="./logo/socialized-logo(160x40).svg"></a>
+    <navbar class = "navbar">
+        <div class = "navbar-container">
+            <div class = "navbar-logo">
+                <a href="index.html"><img src="./logo/socialized-logo.svg" alt="logo"></a>
+            </div>
+            <div class = "navbar-links">
+                <a href="about-us.html">About us</a>
+            </div>
         </div>
-    </div>
+    </navbar>
         <form>
             <label for="fname">First name:</label>
             <input type="text" id="fname" name="fname">
