--- a/sign-up.html
+++ b/sign-up.html
@@ -4,6 +4,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="sign-up.css">
+    
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,7 +45,8 @@
             <label for="phone">Phone Number:</label>
             <input type="text" id="phone" name="phone">
             <div class = "buttonHolder">
-                <input type="submit" id="submit" name="submit">
+                <!--<input onclick="printName()" type="submit" id="submit" name="submit">-->
+                <button onclick="collectData()" type="button" id="submit" name="submit">Submit</button>
             </div>
         </form>
     
@@ -52,4 +54,5 @@
 <script>
     require('./renderer.js');
 </script>
+<script src="sign-up.js"></script>
 </html>
