Added links to homepage and sign up page as well as pictures of the devs to about us

--- a/about-us.html
+++ b/about-us.html
@@ -11,6 +11,21 @@
 
 </p>
 <body>
+        <navbar class = "navbar">
+            <div class = "navbar-container">
+                <div class = "navbar-logo">
+                    <a href="index.html"><img src="./logo/socialized-logo.svg" alt="logo"></a>
+                </div>
+                <div class = "navbar-links">
+                    <a href="sign-up.html">Sign up</a>
+                </div>
+            </div>
+        </navbar>
     <h1>Meet the Devs</h1>
-    <p>Social App is a social media platform created by three epic gamers. Robert, Anthony, and Brawley.</p>
+    <p>&emsp; Social App is a social media platform created by three epic gamers. Robert, Anthony, and Brawley.
+         We decided to get together to create a social app for the sole purpose of gaining experience in our desired field.</p>
+         <img src="./pictures/robChamp.jpg" alt="Poggers Aaron" height="300" width="300">
+         <img src="./pictures/horse.jpg" alt="Horsre man" height = "300" width = "300">
+         <img src="./pictures/Brools.jpg" alt="This Brawley" height = "300" width = "300">
+         
 </body>
