worked on sending data through a post request

--- a/sign-up.html
+++ b/sign-up.html
@@ -51,8 +51,8 @@
         </form>
     
 </body>
-<script>
+<!--<script>
     require('./renderer.js');
-</script>
+</script>-->
 <script src="sign-up.js"></script>
 </html>
