--- a/index.html
+++ b/index.html
@@ -45,7 +45,28 @@
             
             <div class = "modal-content">
                 <span class = "close">&times;</span>
-                <h1>Sign Up</h1>
+                <form>
+                    <label for="userName">Username:</label>
+                    <input type="text" id="userName" name="userName">
+                    <label for="fname">First name:</label>
+                    <input type="text" id="fname" name="fname">
+                    <label for="lname">Last name:</label>
+                    <input type="text" id="lname" name="lname">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password">
+                    <label for="Cpassword">Confirm Password:</label>
+                    <input type="password" id="Cpassword" name="Cpassword">
+                    <label for="phone">Phone Number:</label>
+                    <input type="text" id="phone" name="phone">
+                    <div class = "buttonHolder">
+                        <!--<input onclick="printName()" type="submit" id="submit" name="submit">-->
+                        <button onclick="collectData()" type="button" id="submit" name="submit">Submit</button>
+                    </div>
+                    <div class = "login-link">
+                        <a href="login.html">Already have an account?</a>
+                </form>
             </div>
         </div>
 
