added username to existing code for login page

--- a/sign-up.html
+++ b/sign-up.html
@@ -32,6 +32,8 @@
         </div>
     </navbar>
         <form>
+            <label for="userName">Username:</label>
+            <input type="text" id="userName" name="userName">
             <label for="fname">First name:</label>
             <input type="text" id="fname" name="fname">
             <label for="lname">Last name:</label>
